syntax = "proto3";

package caraml.timber.v1;
option go_package = "github.com/caraml-dev/timber/dataset-service/api/caraml/timber/v1;api";

// Kafka configurations
message KafkaConfig {
  // Kafka Brokers to connect to, comma-delimited, in the form of "<broker_host>:<broker_port>"
  string brokers = 1;
  // Kafka Topic to produce to/consume from
  string topic = 2;
}
