syntax = "proto3";

package caraml.timber.v1;
option go_package = "github.com/caraml-dev/timber/dataset-service/api/caraml/timber/v1;api";

/******************************************
************        Log        ************
*******************************************/
// LogType supported by UPI
enum LogType {
    LOG_TYPE_UNSPECIFIED = 0;
    // Log from Prediction service
    LOG_TYPE_PREDICTION = 1;
    // Log from Observation service
    LOG_TYPE_OBSERVATION = 2;
    // Log from Router service
    LOG_TYPE_ROUTER = 3;
}

// LogProducer describes the service that generates the log
message LogProducer {
    // Unique identifier of the producer.
    string id = 1;
    // Name of the producer, dependent on the type of the log.
    string name = 2;
    // Name of the CaraML project that hosts the producer.
    string project = 3;
}

// LogMetadata is an entity/metadata in Dataset Service that represents an append-only
// data produced by ingesting the observation, prediction, or router logs
message LogMetadata {
    // Unique identifier of a log generated by a LogProducer.
    string id = 1;
    // Name of the log, generated by Dataset Service.
    string name = 2;
    // Source of the log.
    LogType type = 3;
    // List of target names associated with a log.
    repeated string target_names = 4;
    // BQ table ID where the data is stored.
    string bq_table = 5;
    // Details of LogProducer that generated a log.
    LogProducer log_producer = 6;
}